objects/EUR_CRM_Survey_Header__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account_Filter_CustTax_Chain__c</fullName>
        <label>Account Filter CustTax Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_CustTax_Level_1__c</fullName>
        <label>Account Filter CustTax Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_CustTax_Level_2__c</fullName>
        <label>Account Filter CustTax Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_CustTax_Level_3__c</fullName>
        <label>Account Filter CustTax Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_ID__c</fullName>
        <label>Account Filter ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_PROS__c</fullName>
        <label>Account Filter PROS</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Filter_PRS_On__c</fullName>
        <label>Account Filter PRS On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reoccuring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reoccuring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Survey_Completion__c</fullName>
        <label>Survey Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Valid_Until__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Survey Header (EU)</label>
    <listViews>
        <fullName>All_BE_Survey_Headers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_BE_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_BE_ON_Trade_Survey_Header</value>
        </filters>
        <label>All BE Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_BG_Survey_Headers</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_Survey_Completion__c</columns>
        <columns>EUR_CRM_Reoccuring__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_BG_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_BG_ON_Trade_Survey_Header</value>
        </filters>
        <label>All BG Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DE_Survey_Headers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_DE_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_DE_ON_Trade_Survey_Header</value>
        </filters>
        <label>All DE Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_Survey_Headers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_DK_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_DK_ON_Trade_Survey_Header</value>
        </filters>
        <label>All DK Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Survey_Headers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_FI_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_FI_ON_Trade_Survey_Header</value>
        </filters>
        <label>All FI Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Survey_Headers</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_ZA_OFF_Trade_Survey_Header,EUR_CRM_Survey_Header__c.EUR_ZA_ON_Trade_Survey_Header</value>
        </filters>
        <label>All ZA Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RU_Survey_Headers</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_Valid_From__c</columns>
        <columns>EUR_CRM_Valid_Until__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_RU_OFF_Trade_Survey_Header</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey_Header__c.EUR_RU_ON_Trade_Survey_Header</value>
        </filters>
        <label>RU Survey Headers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Survey Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Header (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR BE OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR BE ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR BG OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR BG ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>DE OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>DE ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Survey_Header</fullName>
        <active>true</active>
        <label>DE WS Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <description>Record Type for OFF Trade Accounts&apos; Survey header</description>
        <label>EUR DK OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <description>Record Type for DK On Trade Account&apos;s Survey Header</description>
        <label>EUR DK ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR FI OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR FI ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR RU OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR RU ON Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_OFF_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR ZA OFF Trade Survey Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_ON_Trade_Survey_Header</fullName>
        <active>true</active>
        <label>EUR ZA ON Trade Survey Header</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_BG_SurveyHeader_ValidUnil_Validation</fullName>
        <active>true</active>
        <description>Error message will be prompted up when EUR_CRM_Valid_Until__c &lt; EUR_CRM_Valid_From__c

SurveyHeader cannot be created when 
EUR_CRM_Survey_Header__c.EUR_CRM_Valid_Until__c &lt; EUR_CRM_Survey_Header__c.EUR_CRM_Valid_From__c</description>
        <errorConditionFormula>OR 
(AND (RecordType.Name = &quot;EUR BG ON Trade Survey Header&quot;, EUR_CRM_Valid_Until__c &lt; EUR_CRM_Valid_From__c), 
AND (RecordType.Name = &quot;EUR BG OFF Trade Survey Header&quot;, EUR_CRM_Valid_Until__c &lt; EUR_CRM_Valid_From__c))</errorConditionFormula>
        <errorDisplayField>EUR_CRM_Valid_Until__c</errorDisplayField>
        <errorMessage>Survey Header (EU) Valid_Until CANNOT BE GREATER THAN Valid_From, please try again.</errorMessage>
    </validationRules>
</CustomObject>